--- a/html/popup.html
+++ b/html/popup.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
-    <title>Open in Panel</title>
-    <link rel="stylesheet" href="../css/popup.css">
-    <script src="../js/popup.js"></script>
+    <title data-i18n="extension_name"></title>
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/pages/popup.css">
   </head>
   <body>
-    <p>
-      <b>
-        For this extension to work properly, please enable Chrome’s
-        experimental panels support.
-      </b>
-    </p>
-    <p>
-      <a href="#" class="feedback" tabindex="2">Questions, comments?</a>
-      <a href="#" class="github" tabindex="3">Code on GitHub</a>
-    </p>
-    <p><button tabindex="1">Enable panels&hellip;</button></p>
+    <a href="#" class="button" data-i18n="make_new_panel"></a>
+    <hr>
+    <div class="open-panels">
+      <p class="quiet" data-i18n="no_open_panels"></p>
+    </div>
+
+    <script src="../js/utils/i18n.js"></script>
+    <script src="../js/pages/popup.js"></script>
   </body>
 </html>
