Fix share dialog i18n.

--- a/html/share.html
+++ b/html/share.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <h3 data-i18n="share_heading"></h3>
-    <p>
-      If you enjoy this extension, I’d really appreciate if you showed it by or by sharing this with your friends.
-    </p>
+    <p data-i18n="share_text"></p>
     <p data-i18n="not_asked_again"></p>
     <hr>
     <div class="share-buttons">
