--- a/html/setup.html
+++ b/html/setup.html
@@ -2,40 +2,63 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title data-i18n="extension_name"></title>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/pages/setup.css">
   </head>
   <body>
-    <h3 data-i18n="setup_heading"></h3>
-    <p data-i18n="setup_intro"></p>
+    <h3>
+      <chrome-i18n name="setup_heading">
+    </h3>
+    <p>
+      <chrome-i18n name="setup_intro">
+    </p>
     <hr>
     <div class="steps">
       <section class="enable-panels">
-        <h4 data-i18n="enable_panels_heading"></h4>
-        <div data-i18n="enable_panels_description"></div>
+        <h4>
+          <chrome-i18n name="enable_panels_heading">
+        </h4>
+        <div>
+          <chrome-i18n name="enable_panels_description">
+        </div>
         <p>
-          <a href="#" class="button" data-i18n="enable_panels_button"></a>
+          <a href="#" class="button">
+            <chrome-i18n name="enable_panels_button">
+          </a>
         </p>
       </section>
       <section class="restart-chrome">
-        <h4 data-i18n="restart_chrome_heading"></h4>
-        <div data-i18n="restart_chrome_description"></div>
+        <h4>
+          <chrome-i18n name="restart_chrome_heading">
+        </h4>
+        <div>
+          <chrome-i18n name="restart_chrome_description">
+        </div>
         <p>
-          <a href="#" class="button" data-i18n="restart_chrome_button"></a>
+          <a href="#" class="button">
+            <chrome-i18n name="restart_chrome_button">
+          </a>
         </p>
       </section>
       <section class="test-panels">
-        <h4 data-i18n="test_panels_heading"></h4>
-        <div data-i18n="test_panels_description"></div>
+        <h4>
+          <chrome-i18n name="test_panels_heading">
+        </h4>
+        <div>
+          <chrome-i18n name="test_panels_description">
+        </div>
         <p>
-          <a href="#" class="button" data-i18n="test_panels_button"></a>
+          <a href="#" class="button">
+            <chrome-i18n name="test_panels_button">
+          </a>
         </p>
       </section>
     </div>
     <hr>
     <footer class="quiet">
-      <a href="#" class="skip-setup" data-i18n="skip_setup_link"></a>
+      <a href="#" class="skip-setup">
+        <chrome-i18n name="skip_setup_link">
+      </a>
     </footer>
 
     <script src="../js/utils/i18n.js"></script>
