Implement keyboard shortcuts.

--- a/html/popup.html
+++ b/html/popup.html
@@ -18,11 +18,17 @@
 
     <hr>
 
-    <ul class="open-panels">
-      <li class="placeholder quiet">
-        <chrome-i18n name="no_open_panels">
-      </li>
+    <div class="placeholder quiet">
+      <b>
+        <chrome-i18n name="protip">
+      </b>
 
+      <a href="#" class="shortcuts">
+        <chrome-i18n name="shortcuts">
+      </a>
+    </div>
+
+    <ul class="open-panels">
       <template>
         <li>
           <img src="" alt="">
