Escape ampersands in URLs.

--- a/html/share.html
+++ b/html/share.html
@@ -21,9 +21,9 @@
 
       <iframe src="https://platform.twitter.com/widgets/tweet_button.html?url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;text=Panel%20Tabs%20extension%20for%20Chrome&amp;via=lnikkila&amp;related=lnikkila&amp;text=Panel%20Tabs%20extension%20for%20Chrome&amp;dnt=true" style="width: 110px; height: 20px"></iframe>
 
-      <iframe src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?size=medium&url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha" style="width: 90px; height: 20px"></iframe>
+      <iframe src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?size=medium&amp;url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha" style="width: 90px; height: 20px"></iframe>
 
-      <iframe src="https://mdo.github.io/github-buttons/github-btn.html?user=lnikkila&repo=chrome-panel-tabs&type=watch&count=true" style="width: 90px; height: 20px"></iframe>
+      <iframe src="https://mdo.github.io/github-buttons/github-btn.html?user=lnikkila&amp;repo=chrome-panel-tabs&amp;type=watch&amp;count=true" style="width: 90px; height: 20px"></iframe>
 
       <input type="text" value="https://chrome.google.com/webstore/detail/panel-tabs/cafiainadjhopgdkmgcjiokknjkbhbha" readonly>
     </div>
