More generic directory names.

--- a/app/html/setup.html
+++ b/app/html/setup.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/pages/setup.css">
+    <link rel="stylesheet" href="../stylesheets/base.css">
+    <link rel="stylesheet" href="../stylesheets/pages/setup.css">
   </head>
   <body>
     <h3>
@@ -61,7 +61,7 @@
       </a>
     </footer>
 
-    <script src="../js/utils/i18n.js"></script>
-    <script src="../js/pages/setup.js"></script>
+    <script src="../scripts/utils/i18n.js"></script>
+    <script src="../scripts/pages/setup.js"></script>
   </body>
 </html>
