--- a/app/html/share.html
+++ b/app/html/share.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/pages/share.css">
+    <link rel="stylesheet" href="../stylesheets/base.css">
+    <link rel="stylesheet" href="../stylesheets/pages/share.css">
   </head>
   <body>
     <h3>
@@ -35,7 +35,7 @@
       </a>
     </p>
 
-    <script src="../js/utils/i18n.js"></script>
-    <script src="../js/pages/share.js"></script>
+    <script src="../scripts/utils/i18n.js"></script>
+    <script src="../scripts/pages/share.js"></script>
   </body>
 </html>
