--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -7,8 +7,8 @@
       <chrome-i18n name="extension_name">
     </title>
 
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/pages/popup.css">
+    <link rel="stylesheet" href="../stylesheets/base.css">
+    <link rel="stylesheet" href="../stylesheets/pages/popup.css">
   </head>
 
   <body>
@@ -42,7 +42,7 @@
       </template>
     </ul>
 
-    <script src="../js/utils/i18n.js"></script>
-    <script src="../js/pages/popup.js"></script>
+    <script src="../scripts/utils/i18n.js"></script>
+    <script src="../scripts/pages/popup.js"></script>
   </body>
 </html>
