Rename `chrome-i18n` tag to `x-i18n`.

--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <title>
-      <chrome-i18n name="extension_name">
+      <x-i18n name="extension_name">
     </title>
 
     <link rel="stylesheet" href="../stylesheets/base.css">
@@ -13,18 +13,18 @@
 
   <body>
     <a href="#" class="button">
-      <chrome-i18n name="make_new_panel">
+      <x-i18n name="make_new_panel">
     </a>
 
     <hr>
 
     <div class="placeholder quiet">
       <b>
-        <chrome-i18n name="protip">
+        <x-i18n name="protip">
       </b>
 
       <a href="#" class="shortcuts">
-        <chrome-i18n name="shortcuts">
+        <x-i18n name="shortcuts">
       </a>
     </div>
 
@@ -36,7 +36,7 @@
           <span></span>
 
           <a href="">
-            <chrome-i18n name="put_back_panel">
+            <x-i18n name="put_back_panel">
           </a>
         </li>
       </template>
