--- a/app/html/setup.html
+++ b/app/html/setup.html
@@ -7,49 +7,49 @@
   </head>
   <body>
     <h3>
-      <chrome-i18n name="setup_heading">
+      <x-i18n name="setup_heading">
     </h3>
     <p>
-      <chrome-i18n name="setup_intro">
+      <x-i18n name="setup_intro">
     </p>
     <hr>
     <div class="steps">
       <section class="enable-panels">
         <h4>
-          <chrome-i18n name="enable_panels_heading">
+          <x-i18n name="enable_panels_heading">
         </h4>
         <div>
-          <chrome-i18n name="enable_panels_description">
+          <x-i18n name="enable_panels_description">
         </div>
         <p>
           <a href="#" class="button">
-            <chrome-i18n name="enable_panels_button">
+            <x-i18n name="enable_panels_button">
           </a>
         </p>
       </section>
       <section class="restart-chrome">
         <h4>
-          <chrome-i18n name="restart_chrome_heading">
+          <x-i18n name="restart_chrome_heading">
         </h4>
         <div>
-          <chrome-i18n name="restart_chrome_description">
+          <x-i18n name="restart_chrome_description">
         </div>
         <p>
           <a href="#" class="button">
-            <chrome-i18n name="restart_chrome_button">
+            <x-i18n name="restart_chrome_button">
           </a>
         </p>
       </section>
       <section class="test-panels">
         <h4>
-          <chrome-i18n name="test_panels_heading">
+          <x-i18n name="test_panels_heading">
         </h4>
         <div>
-          <chrome-i18n name="test_panels_description">
+          <x-i18n name="test_panels_description">
         </div>
         <p>
           <a href="#" class="button">
-            <chrome-i18n name="test_panels_button">
+            <x-i18n name="test_panels_button">
           </a>
         </p>
       </section>
@@ -57,7 +57,7 @@
     <hr>
     <footer class="quiet">
       <a href="#" class="skip-setup">
-        <chrome-i18n name="skip_setup_link">
+        <x-i18n name="skip_setup_link">
       </a>
     </footer>
 
