--- a/source/html/share.html
+++ b/source/html/share.html
@@ -19,7 +19,7 @@
     <div class="share-buttons">
       <iframe src="https://facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;layout=button_count" style="width: 110px; height: 20px"></iframe>
 
-      <iframe src="https://platform.twitter.com/widgets/tweet_button.html?url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;text=Panel%20Tabs%20extension%20for%20Chrome&amp;via=lnikkila&amp;related=lnikkila&amp;text=Panel%20Tabs%3A%20Picture%20in%20picture%20mode%20for%20websites.&amp;dnt=true" style="width: 110px; height: 20px"></iframe>
+      <iframe src="https://platform.twitter.com/widgets/tweet_button.html?url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;via=lnikkila&amp;related=lnikkila&amp;text=Panel%20Tabs%3A%20Picture%20in%20picture%20mode%20for%20websites.&amp;dnt=true" style="width: 110px; height: 20px"></iframe>
 
       <iframe src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?size=medium&amp;url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha" style="width: 90px; height: 20px"></iframe>
 
