Remove .quiet class.

--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -13,7 +13,7 @@
 
     <hr>
 
-    <div class="placeholder quiet">
+    <div class="placeholder">
       <b>
         <x-i18n name="protip">
       </b>
