Add lodash dependency.

--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -37,6 +37,7 @@
       </template>
     </ul>
 
+    <script src="../scripts/vendor/lodash.js"></script>
     <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/popup.js"></script>
   </body>
