--- a/source/html/share.html
+++ b/source/html/share.html
@@ -35,6 +35,7 @@
       </a>
     </p>
 
+    <script src="../scripts/vendor/lodash.js"></script>
     <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/share.js"></script>
   </body>
