--- a/source/html/setup.html
+++ b/source/html/setup.html
@@ -61,6 +61,7 @@
       </a>
     </footer>
 
+    <script src="../scripts/vendor/lodash.js"></script>
     <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/setup.js"></script>
   </body>
