Add user-editable options.
Closes #15.

--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -37,6 +37,15 @@
       </template>
     </ul>
 
+    <footer class="tabs">
+      <a href="#" class="tabs__tab tabs__tab--active">
+        Panels
+      </a>
+      <a href="options.html" class="tabs__tab">
+        Options
+      </a>
+    </footer>
+
     <script src="../scripts/vendor/lodash.js"></script>
     <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/popup.js"></script>
