Allow hiding the context menu items.
Closes #24.

--- a/source/html/options.html
+++ b/source/html/options.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h4>Behaviour</h4>
     <p>
       <label>
         <input data-option="autoCollapse" type="checkbox">
@@ -18,6 +19,16 @@
       <label>
         <input data-option="keepWindowsOpen" type="checkbox">
         Keep windows open when creating panels
+      </label>
+    </p>
+
+    <hr>
+
+    <h4>Appearance</h4>
+    <p>
+      <label>
+        <input data-option="showContextMenuItems" type="checkbox">
+        Show items in the context menu
       </label>
     </p>
 
