Don’t link active popup tabs.

--- a/source/html/options.html
+++ b/source/html/options.html
@@ -36,9 +36,9 @@
       <a href="popup.html" class="tabs__tab">
         Panels
       </a>
-      <a href="#" class="tabs__tab tabs__tab--active">
+      <span class="tabs__tab tabs__tab--active">
         Options
-      </a>
+      </span>
     </footer>
 
     <script src="../scripts/vendor/lodash.js"></script>
