--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -38,9 +38,9 @@
     </ul>
 
     <footer class="tabs">
-      <a href="#" class="tabs__tab tabs__tab--active">
+      <span href="#" class="tabs__tab tabs__tab--active">
         Panels
-      </a>
+      </span>
       <a href="options.html" class="tabs__tab">
         Options
       </a>
