Make options UI translatable.
Also add an `en_GB` localisation.

--- a/source/html/options.html
+++ b/source/html/options.html
@@ -8,36 +8,40 @@
   </head>
 
   <body>
-    <h4>Behaviour</h4>
+    <h4>
+      <x-i18n name="options_category_behavior">
+    </h4>
     <p>
       <label>
         <input data-option="keepWindowsOpen" type="checkbox">
-        Keep windows open when creating panels
+        <x-i18n name="options_keep_windows_open">
       </label>
     </p>
     <p>
       <label>
         <input data-option="autoCollapse" type="checkbox">
-        Collapse defocused panels
+        <x-i18n name="options_auto_collapse">
       </label>
     </p>
 
     <hr>
 
-    <h4>Appearance</h4>
+    <h4>
+      <x-i18n name="options_category_appearance">
+    </h4>
     <p>
       <label>
         <input data-option="showContextMenuItems" type="checkbox">
-        Show items in the context menu
+        <x-i18n name="options_show_context_menu_items">
       </label>
     </p>
 
     <footer class="tabs">
       <a href="popup.html" class="tabs__tab">
-        Panels
+        <x-i18n name="popup_tab_panels">
       </a>
       <span class="tabs__tab tabs__tab--active">
-        Options
+        <x-i18n name="popup_tab_options">
       </span>
     </footer>
 
