--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -39,10 +39,10 @@
 
     <footer class="tabs">
       <span href="#" class="tabs__tab tabs__tab--active">
-        Panels
+        <x-i18n name="popup_tab_panels">
       </span>
       <a href="options.html" class="tabs__tab">
-        Options
+        <x-i18n name="popup_tab_options">
       </a>
     </footer>
 
