Use an HTML import for base CSS and JS stacks.

--- a/source/html/options.html
+++ b/source/html/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../stylesheets/base.css">
+    <link rel="import" href="base.html">
     <link rel="stylesheet" href="../stylesheets/pages/popup.css">
     <link rel="stylesheet" href="../stylesheets/pages/options.css">
   </head>
@@ -45,8 +45,6 @@
       </span>
     </footer>
 
-    <script src="../scripts/vendor/lodash.js"></script>
-    <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/options.js"></script>
   </body>
 </html>
