--- a/source/html/share.html
+++ b/source/html/share.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../stylesheets/base.css">
+    <link rel="import" href="base.html">
     <link rel="stylesheet" href="../stylesheets/pages/share.css">
   </head>
   <body>
@@ -35,8 +35,6 @@
       </a>
     </p>
 
-    <script src="../scripts/vendor/lodash.js"></script>
-    <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/share.js"></script>
   </body>
 </html>
