--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../stylesheets/base.css">
+    <link rel="import" href="base.html">
     <link rel="stylesheet" href="../stylesheets/pages/popup.css">
   </head>
 
@@ -46,8 +46,6 @@
       </a>
     </footer>
 
-    <script src="../scripts/vendor/lodash.js"></script>
-    <script src="../scripts/utils/i18n.js"></script>
     <script src="../scripts/pages/popup.js"></script>
   </body>
 </html>
