Add a separate options page.
Closes #32.

--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -38,10 +38,10 @@
     </ul>
 
     <footer class="tabs">
-      <span href="#" class="tabs__tab tabs__tab--active">
+      <span class="tabs__tab tabs__tab--active">
         <x-i18n name="popup_tab_panels">
       </span>
-      <a href="options.html" class="tabs__tab">
+      <a href="popup_options.html" class="tabs__tab">
         <x-i18n name="popup_tab_options">
       </a>
     </footer>
