Tweak page dimensions.

--- a/source/html/popup_options.html
+++ b/source/html/popup_options.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="import" href="options.html">
+    <link rel="stylesheet" href="../stylesheets/pages/popup.css">
   </head>
 
   <body>
