--- a/source/html/options.html
+++ b/source/html/options.html
@@ -7,30 +7,30 @@
 
   <body>
     <h4>
-      <x-i18n name="options_category_behavior">
+      <chrome-i18n name="options_category_behavior">
     </h4>
     <p>
       <label>
         <input data-option="keepWindowsOpen" type="checkbox">
-        <x-i18n name="options_keep_windows_open">
+        <chrome-i18n name="options_keep_windows_open">
       </label>
     </p>
     <p>
       <label>
         <input data-option="autoCollapse" type="checkbox">
-        <x-i18n name="options_auto_collapse">
+        <chrome-i18n name="options_auto_collapse">
       </label>
     </p>
 
     <hr>
 
     <h4>
-      <x-i18n name="options_category_appearance">
+      <chrome-i18n name="options_category_appearance">
     </h4>
     <p>
       <label>
         <input data-option="showContextMenuItems" type="checkbox">
-        <x-i18n name="options_show_context_menu_items">
+        <chrome-i18n name="options_show_context_menu_items">
       </label>
     </p>
 
