--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -8,18 +8,18 @@
 
   <body>
     <a href="#" class="button">
-      <x-i18n name="make_new_panel">
+      <chrome-i18n name="make_new_panel">
     </a>
 
     <hr>
 
     <div class="placeholder">
       <b>
-        <x-i18n name="protip">
+        <chrome-i18n name="protip">
       </b>
 
       <a href="#" class="shortcuts">
-        <x-i18n name="shortcuts">
+        <chrome-i18n name="shortcuts">
       </a>
     </div>
 
@@ -31,7 +31,7 @@
           <span></span>
 
           <a href="">
-            <x-i18n name="put_back_panel">
+            <chrome-i18n name="put_back_panel">
           </a>
         </li>
       </template>
@@ -39,10 +39,10 @@
 
     <footer class="tabs">
       <span class="tabs__tab tabs__tab--active">
-        <x-i18n name="popup_tab_panels">
+        <chrome-i18n name="popup_tab_panels">
       </span>
       <a href="popup_options.html" class="tabs__tab">
-        <x-i18n name="popup_tab_options">
+        <chrome-i18n name="popup_tab_options">
       </a>
     </footer>
 
