--- a/source/html/popup_options.html
+++ b/source/html/popup_options.html
@@ -9,10 +9,10 @@
   <body>
     <footer class="tabs">
       <a href="popup.html" class="tabs__tab">
-        <x-i18n name="popup_tab_panels">
+        <chrome-i18n name="popup_tab_panels">
       </a>
       <span class="tabs__tab tabs__tab--active">
-        <x-i18n name="popup_tab_options">
+        <chrome-i18n name="popup_tab_options">
       </span>
     </footer>
 
