--- a/source/html/share.html
+++ b/source/html/share.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <h3>
-      <x-i18n name="share_heading">
+      <chrome-i18n name="share_heading">
     </h3>
     <p>
-      <x-i18n name="share_text">
+      <chrome-i18n name="share_text">
     </p>
     <p>
-      <x-i18n name="not_asked_again">
+      <chrome-i18n name="not_asked_again">
     </p>
     <hr>
     <div class="share-buttons">
@@ -31,7 +31,7 @@
     <hr>
     <p style="text-align: right">
       <a href="#" class="button close-window">
-        <x-i18n name="finish_button">
+        <chrome-i18n name="finish_button">
       </a>
     </p>
 
