--- a/source/html/base.html
+++ b/source/html/base.html
@@ -11,6 +11,6 @@
 
   <body>
     <script src="../scripts/vendor/lodash.js"></script>
-    <script src="../scripts/utils/i18n.js"></script>
+    <script src="../scripts/utils/chrome-i18n.js"></script>
   </body>
 </html>
