Implement Google Analytics
I’m using this to figure out which features are used and how to improve
them. Users can opt-in during the initial setup; analytics will be
disabled for existing users.

--- a/source/html/options.html
+++ b/source/html/options.html
@@ -34,6 +34,21 @@
       </label>
     </p>
 
+    <hr>
+
+    <h4>
+      <chrome-i18n name="options_category_other">
+    </h4>
+    <p>
+      <label>
+        <input data-option="enableAnalytics" type="checkbox">
+        <chrome-i18n name="options_enable_analytics">
+      </label>
+    </p>
+    <div class="small">
+      <chrome-i18n name="options_enable_analytics_description">
+    </div>
+
     <script src="../scripts/pages/options.js"></script>
   </body>
 </html>
