--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -13,7 +13,7 @@
 
     <hr>
 
-    <div class="placeholder">
+    <div class="placeholder small">
       <b>
         <chrome-i18n name="protip">
       </b>
