--- a/source/html/setup.html
+++ b/source/html/setup.html
@@ -14,6 +14,22 @@
     </p>
     <hr>
     <div class="steps">
+      <section class="analytics">
+        <h4>
+          <chrome-i18n name="options_enable_analytics">
+        </h4>
+        <div>
+          <chrome-i18n name="options_enable_analytics_description">
+        </div>
+        <p>
+          <a href="#" class="enable button">
+            <chrome-i18n name="analytics_enable_button">
+          </a>
+          <a href="#" class="disable button button--secondary">
+            <chrome-i18n name="analytics_disable_button">
+          </a>
+        </p>
+      </section>
       <section class="enable-panels">
         <h4>
           <chrome-i18n name="enable_panels_heading">
