--- a/source/html/base.html
+++ b/source/html/base.html
@@ -12,5 +12,7 @@
   <body>
     <script src="../scripts/vendor/lodash.js"></script>
     <script src="../scripts/utils/chrome-i18n.js"></script>
+    <script src="../scripts/utils/google-analytics.js"></script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
   </body>
 </html>
