--- a/source/html/share.html
+++ b/source/html/share.html
@@ -6,26 +6,34 @@
     <link rel="stylesheet" href="../stylesheets/pages/share.css">
   </head>
   <body>
-    <h3>
-      <chrome-i18n name="share_heading">
-    </h3>
-    <p>
-      <chrome-i18n name="share_text">
-    </p>
-    <p>
-      <chrome-i18n name="not_asked_again">
-    </p>
+    <h3><chrome-i18n name="share_heading"></h3>
+
+    <p><chrome-i18n name="share_text"></p>
+    <p><chrome-i18n name="not_asked_again"></p>
+
     <hr>
-    <div class="share-buttons">
-      <iframe src="https://facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;layout=button_count" style="width: 110px; height: 20px"></iframe>
 
-      <iframe src="https://platform.twitter.com/widgets/tweet_button.html?url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;via=lnikkila&amp;related=lnikkila&amp;text=Panel%20Tabs%3A%20Picture%20in%20picture%20mode%20for%20websites.&amp;dnt=true" style="width: 110px; height: 20px"></iframe>
+    <div class="share-controls">
+      <iframe
+        src="https://facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;layout=button_count"
+        style="width: 110px; height: 20px"></iframe>
 
-      <iframe src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?size=medium&amp;url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha" style="width: 90px; height: 20px"></iframe>
+      <iframe
+        src="https://platform.twitter.com/widgets/tweet_button.html?url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha&amp;via=lnikkila&amp;related=lnikkila&amp;text=Panel%20Tabs%3A%20Picture%20in%20picture%20mode%20for%20websites.&amp;dnt=true"
+        style="width: 110px; height: 20px"></iframe>
 
-      <iframe src="https://mdo.github.io/github-buttons/github-btn.html?user=lnikkila&amp;repo=chrome-panel-tabs&amp;type=watch&amp;count=true" style="width: 90px; height: 20px"></iframe>
+      <iframe
+        src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?size=medium&amp;url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fpanel-tabs%2Fcafiainadjhopgdkmgcjiokknjkbhbha"
+        style="width: 90px; height: 20px"></iframe>
 
-      <input type="text" value="https://chrome.google.com/webstore/detail/panel-tabs/cafiainadjhopgdkmgcjiokknjkbhbha" readonly>
+      <iframe
+        src="https://mdo.github.io/github-buttons/github-btn.html?user=lnikkila&amp;repo=chrome-panel-tabs&amp;type=star&amp;count=true"
+        style="width: 90px; height: 20px"></iframe>
+
+      <input
+        value="https://chrome.google.com/webstore/detail/panel-tabs/cafiainadjhopgdkmgcjiokknjkbhbha"
+        type="text"
+        readonly>
     </div>
 
     <hr>
