Trigger setup again with Chrome 49
This commit should be reverted when these changes are no longer needed.

--- a/source/html/setup.html
+++ b/source/html/setup.html
@@ -6,12 +6,24 @@
     <link rel="stylesheet" href="../stylesheets/pages/setup.css">
   </head>
   <body>
-    <h3>
-      <chrome-i18n name="setup_heading">
-    </h3>
-    <p>
-      <chrome-i18n name="setup_intro">
-    </p>
+    <div class="header--normal" style="display: none">
+      <h3>
+        <chrome-i18n name="setup_heading">
+      </h3>
+      <p>
+        <chrome-i18n name="setup_intro">
+      </p>
+    </div>
+    <div class="header--reset" style="display: none">
+      <h3>
+        Google Chrome has been updated
+      </h3>
+      <p>
+        <strong>Google Chrome 49 made some changes to panels.</strong>
+        To make Panel Tabs work with these changes, you’ll need to go through
+        the setup again.
+      </p>
+    </div>
     <hr>
     <div class="steps">
       <section class="analytics">
