Farewell, Panel Tabs
https://lnikki.la/articles/farewell-panel-tabs/

--- a/source/html/popup.html
+++ b/source/html/popup.html
@@ -7,6 +7,11 @@
   </head>
 
   <body>
+    <div class="notification">
+      Unfortunately Panel Tabs is no longer maintained.
+      <a href="#">Read more&hellip;</a>
+    </div>
+
     <a href="#" class="button">
       <chrome-i18n name="make_new_panel">
     </a>
